--- a/proyecto html/style.css
+++ b/proyecto html/style.css
@@ -46,6 +46,22 @@ video {
 }
 
 /* OCIO */
+.video-responsive {
+  position: relative;
+  padding-bottom: 56.25%; /* Relación 16:9 */
+  height: 0;
+  overflow: hidden;
+  border-radius: 10px;
+}
+
+.video-responsive iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 /* CINE*/
 /* VISÍTANOS */
 .text-plaza-norte {
