--- a/proyecto html/style.css
+++ b/proyecto html/style.css
@@ -143,3 +143,12 @@ input {
       font-size: 0.8rem;
     }
 
+    #yelmo {
+      text-align:center;
+      margin-top: 50px;
+      margin-bottom: 50px;
+    }
+
+    #cine {
+      margin-bottom: 50px;
+    }
